--- a/templates/invoicing/detail.html
+++ b/templates/invoicing/detail.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Detail</title>
+    <title> Bill detail</title>
 </head>
 <body>
     <header> Invoice N {{invoice_index}} </header>
@@ -10,16 +10,16 @@
     <p> The invoice company name is {{company_name}} </p>
     <p> The invoice company nit is {{nit}} </p>
     <p> The invoice code is {{code}} </p>
-    <p> The products of the invoice are: </p>
+    <p> The products of the invoice are: </p> </br>
     {% for product in products %}
-        <p> {{product.name}} </p>
-        <p> {{product.decription}} </p>
+        <p> Product name: {{product.name}} </p>
+        <p> Product description: {{product.description}} </p>
         </br>
     {% endfor %}
 
     <footer>
         <p> Would you like to edit this invoice? <a href="{% url 'invoicing:update' invoice_id client_id %}"> Change here. </a> </p>
-        <p> Would you like to delete this invoice? </p>
+        <p> Would you like to delete this invoice? <a href="{% url 'invoicing:delete' invoice_id %}"> Delete here. </a> </p>
         <p> Did you finish? <a href="{% url 'users:logout' %}"> Logout. </a> </p>
         <p> Would you like to go the menu? <a href="{% url 'invoicing:ListBillView' client_id %}"> Click here. </a> 
     </footer>
