--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -41,6 +41,8 @@
 
     <footer>
         <p class= 'mt-4'> Don't have an account yet? <a href="{% url 'users:signup' %}"> Sign up here. </a> </p>
+    </br>
+        <p> Would you like to import a CSV file with clients information? <a href="{% url 'users:import'%}"> Import. </a> </p>
     </footer>
     
 </body>
